Thu Aug 28 15:11:21 MDT 2003 Neal Richter <nealr@rightnow.com>

    * Changed db/LICENSE file to new LGPL compatible license from Sleepycat
      Software -- Thanks Sleepycat!

    * Reverted to Revision 1.2 or db/mp_alloc.c  The recent changed cuased
      large DB growth.  Strangely the files contained no 'new' data, they were
      just much larger.  Looks like the pages were being flushed too often????

Thu Aug 28 12:41:22 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * global: updated with 'autoreconf -if' (autoconf 2.57, libtool 1.5.0a and
      automake 1.7.6)
    * 'make check' successful on: AMD64 Linux 2.4, Alpha Linux 2.2,
      RedHat Linux 7.3 (2.4), SPARC Ultra60 Linux 2.4,
      Sparc R220 Sun Solaris (5.8).
    * README.developer: added further info

Thu Aug 28 12:00:10 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * db/[config.guess,config.sub,install-sh,ltmain.sh,missing]: added in the
      database directory (this way 'make dist' goes on); I have not been able to
      tell the db/configure script to get the 'top_srcdir' ones (which should be
      the default behaviour). Maybe in the future we'll look for this.

Thu Aug 28 11:53:48 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * db/configure.in: changed AC_PROG_INSTALL() to AC_PROG_INSTALL and removed
      AC_CONFIG_AUX_DIR; this implies that autotools copies will be made for the
      db directory as well.

Thu Aug 28 11:36:42 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * [htcommon,htdb,htdig,htfuzzy,htlib,htnet,htsearch,httools,htword,test]/Makefile.am:
      added the option above to every *_LDFLAGS

Thu Aug 28 11:30:39 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * Makefile.am: removed acconfig.h from the EXTRA_DIST list

Thu Aug 28 11:25:07 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * configure.in: removed portability checks for error, stat and lstat that