@@ -7,7 +7,7 @@
 // or the GNU Library General Public License (LGPL) version 2 or later
 // <http://www.gnu.org/copyleft/lgpl.html>
 //
-// $Id: WordDB.cc,v 1.7 2003/06/24 19:57:27 nealr Exp $
+// $Id: WordDB.cc,v 1.8 2003/08/29 15:39:15 nealr Exp $
 //
 
 #ifdef HAVE_CONFIG_H
@@ -65,8 +65,6 @@ int WordDB::Open(const String& filename, DBTYPE type, int flags, int mode) {
     // flush cache unnecessarily).
     HtConfiguration *config = HtConfiguration::config();
     
-    //CDB___mp_dirty_level = config->Value("wordlist_cache_dirty_level");
-    CDB_set_mp_diry_level(config->Value("wordlist_cache_dirty_level"));
   }
 
   int error = db->open(db, filename, NULL, type, (u_int32_t)flags, mode);
